<resources>
    <string name="app_name">ProjetoBandio</string>
    <string name="login">Login</string>
    <string name="bandio">bandio</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
</resources>
